Sun Jul  5 08:08:25 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_insnhelper.c (vm_yield_setup_block_args): restores the firs
	  arg where is overwritten at funcall.  [ruby-core:24139]

Fri Jul  3 19:48:40 2009  Tadayoshi Funaba  <tadf@dotrb.org>

	* complex.c: undef-ed shome methods.  [ruby-core:24110]

	* complex.c (Numeric#arg): NaN for NaN.  [ruby-core:24116]

Thu Jul  2 07:53:44 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (parser_yylex): fixed wrong variable.

Tue Jun 30 18:19:07 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* hash.c (rb_hash_hash): documentation fix.  a patch from
	  Marc-Andre Lafortune.  [ruby-core:23943]

	* object.c (rb_mod_cmp): ditto.

	* range.c (range_eq): ditto.

	* string.c (rb_str_partition, rb_str_rpartition): ditto.

	* struct.c (rb_struct_s_def): ditto.

Wed Jul  1 08:46:11 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* marshal.c (w_encoding): encodings need extra depth.
	  [ruby-core:24100]

Tue Jun 30 17:44:24 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* re.c (reg_match_pos): adjust offset based on characters, not
	  bytes.  [ruby-dev:38722]

	* string.c (rb_str_offset): new function.

	* string.c (rb_str_index_m): no call to rb_reg_adjust_startpos().

Tue Jun 30 16:48:49 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* tool/compile_prelude.rb: use US-ASCII name.

Tue Jun 30 11:05:59 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dln.c (dln_find_1): fixed index overrun.

Mon Jun 29 18:55:55 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dln.c (dln_find_1): fix for files with dots.  [ruby-dev:38588]

Mon Jun 29 17:14:31 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (file_expand_path): should copy original encoding.
	  [ruby-dev:38612]

Sat Jun 27 03:09:04 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* io.c (argf_rewind): need to rewind $. and ARGF.lineno.
	  [ruby-core:24046]

	* io.c (struct argf): refactoring on $. and ARGF.lineno behavior.
