@@ -631,30 +631,14 @@ void rb_thread_execute_interrupts(rb_thread_t *);
   RUBY_VM_CHECK_INTS_TH(GET_THREAD())
 
 /* tracer */
-static inline void
-exec_event_hooks(rb_event_hook_t *hook, rb_event_flag_t flag, VALUE self, ID id, VALUE klass)
-{
-    if (self == rb_mRubyVMFrozenCore) return;
-    while (hook) {
-	if (flag & hook->flag) {
-	    (*hook->func)(flag, hook->data, self, id, klass);
-	}
-	hook = hook->next;
-    }
-}
+void
+rb_threadptr_exec_event_hooks(rb_thread_t *th, rb_event_flag_t flag, VALUE self, ID id, VALUE klass);
 
 #define EXEC_EVENT_HOOK(th, flag, self, id, klass) do { \
     rb_event_flag_t wait_event__ = th->event_flags; \
     if (UNLIKELY(wait_event__)) { \
 	if (wait_event__ & (flag | RUBY_EVENT_VM)) { \
-	    VALUE self__ = (self), klass__ = (klass); \
-	    ID id__ = (id); \
-	    if (wait_event__ & flag) { \
-		exec_event_hooks(th->event_hooks, flag, self__, id__, klass__); \
-	    } \
-	    if (wait_event__ & RUBY_EVENT_VM) { \
-		exec_event_hooks(th->vm->event_hooks, flag, self__, id__, klass__); \
-	    } \
+	    rb_threadptr_exec_event_hooks(th, flag, self, id, klass); \
 	} \
     } \
 } while (0)
